--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,30 +26,30 @@ jobs:
           version: latest
           args: --check . -g '*.lua' -g '!deps/'
 
-  documentation:
-    runs-on: ubuntu-latest
-    name: documentation
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-
-      - name: setup neovim
-        uses: rhysd/action-setup-vim@v1
-        with:
-          neovim: true
-          version: v0.10.1
-
-      - name: generate documentation
-        run: make documentation-ci
-
-      - name: check docs diff
-        run: exit $(git status --porcelain doc | wc -l | tr -d " ")
+#  documentation:
+#    runs-on: ubuntu-latest
+#    name: documentation
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 2
+#
+#      - name: setup neovim
+#        uses: rhysd/action-setup-vim@v1
+#        with:
+#          neovim: true
+#          version: v0.10.1
+#
+#      - name: generate documentation
+#        run: make documentation-ci
+#
+#      - name: check docs diff
+#        run: exit $(git status --porcelain doc | wc -l | tr -d " ")
 
   tests:
     needs:
       - lint
-      - documentation
+#      - documentation
     runs-on: ubuntu-latest
     timeout-minutes: 1
     strategy:
@@ -96,7 +96,7 @@ jobs:
   tests-nightly:
     needs:
       - lint
-      - documentation
+#      - documentation
     runs-on: ubuntu-latest
     timeout-minutes: 1
     continue-on-error: true
